--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,22 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Mac
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.vscode/
+logs/
+
