--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
           pip install ruff
           # stop the build if there are Python syntax errors or undefined names
-          ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
-          # default set of ruff rules with GitHub Annotations
-          ruff --format=github --target-version=py37 .
+          ruff --format=github --select=E9,F63,F7,F82 --target-version=py39 check .
+          # ruff --format=github --select=E9,F63,F7,F82 --target-version=py39 fix .
+
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
