--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -24,8 +24,7 @@ jobs:
         run: |
           pip install ruff
           # stop the build if there are Python syntax errors or undefined names
-          ruff --format=github --select=E9,F63,F7,F82 --target-version=py39 check .
-          # ruff --format=github --select=E9,F63,F7,F82 --target-version=py39 fix .
+          ruff --format=github --select=E9,F63,F7,F82 --target-version=py39 .
 
       - name: Test with pytest
         run: |
