--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
-          pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          pytest --doctest-modules --junitxml=junit/test-results.xml
       - name: Lint with flake8
         uses: py-actions/flake8@v2
         with:
