--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Lint with flake8
         uses: py-actions/flake8@v2
         with:
+          config_file: .flake8
           ignore: "F401"
           # exclude: "src/ignoreme.py"
           max-line-length: "200"
